--- a/Greens_functions_presentation.tex
+++ b/Greens_functions_presentation.tex
@@ -532,7 +532,9 @@
 \note{
 \begin{itemize}
 \item
-    Technically, the Green's function is a generalized function which 
+    Technically, the Green's function is a generalized function such that $ \L G $ is the delta function (it has the sifting property).
+\item
+    In practise, we'll keep using the less-precise way; just remember that there is a more correct way.
 \end{itemize}
 
 }
